--- a/src/ComicBookGallery1/ComicBookGallery1/Views/ComicBooks/Detail.cshtml
+++ b/src/ComicBookGallery1/ComicBookGallery1/Views/ComicBooks/Detail.cshtml
@@ -28,8 +28,16 @@
         <h5>Description:</h5>
         <div>@Html.Raw(description)</div>
 
+        @if (artists.Length >0)
+        {
         <h5>Artists:</h5>
-        <div>@artists</div>
+        <div>
+            @foreach (var artist in artists)
+            {
+                <li>@artist</li>
+            }
+        </div>
+        }
     </div>
 </body>
 </html>
