--- a/src/ComicBookGallery2/Views/ComicBooks/Detail.cshtml
+++ b/src/ComicBookGallery2/Views/ComicBooks/Detail.cshtml
@@ -1,6 +1,7 @@
 ﻿@model ComicBookGallery2.Models.ComicBook
 @{
     ViewBag.Title = Model.DisplayText;
+    ViewBag.ShowBackBar = true;
 }
 
 <h2>@Model.DisplayText</h2>
